--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coop-Virtual</title>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
     
 </head>
@@ -25,10 +26,10 @@
     </header>
    
 <main>   
-<section id="inicio">
+<article id="inicio">
         <h1>Cooperativa escolar <br> <span class="color-acento">"El Progreso"</span></h1>
 
-    </section>
+</article>
 
         <section id="info" class="celeste cajag">
             <div class="container">
@@ -81,9 +82,9 @@
 <footer>
     <div class="container">
     <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
-    <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="img/instagram.webp" alt="" height="75"></a>
-    <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="img/facebook.png" alt="" height="75"></a>
-    <a href="#" target="_blank"><img src="img/whatsapp .jpg" alt="" height="75"></a>
+    <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="img/instagram.webp" alt="" height="75"class="icono1"></a>
+    <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="img/facebook.png" alt="" height="75" class="icono2"></a>
+    <a href="#" target="_blank"><img src="img/whatsapp .jpg" alt="" height="75"class="icono3"></a>
 
 </div>
 </footer>
