--- a/pages/creacion.html
+++ b/pages/creacion.html
@@ -23,7 +23,7 @@
                 <a class=azul1 href= "consejo.html">Consejo de Administración</a>
         </div>
     </header>
-
+    <main>
     <h1>Creación de la Cooperativa</h1>
     
  <p> La Cooperativa Escolar “El Progreso” comenzó a conformarse en la Escuela de Educación Media Dr. Mariano Moreno en el año 2007 para concretarse en el año 2008 como un proyecto de los alumnos de tercero Polimodal y los profesores responsables de la asignatura “Discurso en la empresa y Tecnología de Gestión”. Su fin fue buscar una forma diferente de trabajar en el aula y a su vez acercar a los alumnos a la realidad del trabajo cooperativo.
@@ -37,6 +37,7 @@ En este año 2023 la cantidad total de asociados es de 126, en donde estan inclu
     <img src="../img/coopA3.jpeg" alt="">
 
     <p><a href="../index.html"> <button>Volver</a></button></p>
+</main>
     <footer>
         <div class="container">
         <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
