--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <footer>
     <div class="container">
-    <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
+    <p>&copy; Cooperativa Escolar "El Progreso" 2023 <br> <span class="negrita"> Agustina Pérez Lencina <br>Guadalupe de los Santos</p></span>
     <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="img/instagram.webp" alt="" height="75"class="icono1"></a>
     <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="img/facebook.png" alt="" height="75" class="icono2"></a>
     <a href="#" target="_blank"><img src="img/whatsapp .jpg" alt="" height="75"class="icono3"></a>
