--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    
 <main>   
 <article id="inicio">
-        <h1>Cooperativa escolar <br> <span class="color-acento">"El Progreso"</span></h1>
+        <h1>Cooperativa Escolar <br> <span class="color-acento">"El Progreso"</span></h1>
 
 </article>
 
