--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -36,13 +36,14 @@
 <p>1) <span class="negrita">PRESIDENTE: </span> Retegui, Marco</p>
 <p>2) <span class="negrita">VICEPRESIDENTE: </span> Alvarez, Maite</p>
 <p>3) <span class="negrita">SECRETARIA:</span> Montangie, Candelaria</p>
-<p>4) <span class="negrita">TESORERA:</span> Villarroel, Celeste</p>
+<p>4) <span class="negrita">SINDICO:</span> Castellano, Abigail</p>
+<p>5) <span class="negrita">TESORERA:</span> Villarroel, Celeste</p>
 <p>5) <span class="negrita">VOCAL I:</span> López Villar, Morena </p>
-<p>6) <span class="negrita">VOCAL II: </span>Ramírez, Tomás</p>
-<p>7) <span class="negrita">VOCAL III: </span>Echeverri, Tyara</p>
-<p>8)<span class="negrita"> VOCAL IV:</span> Delgue, Tatiana </p>
-<p>9) <span class="negrita">VOCAL V: </span>Borges, Pía</p>
-<p>10) <span class="negrita">SINDICO:</span> Castellano, Abigail</p>
+<p>7) <span class="negrita">VOCAL II: </span>Ramírez, Tomás</p>
+<p>8) <span class="negrita">VOCAL III: </span>Echeverri, Tyara</p>
+<p>9)<span class="negrita"> VOCAL IV:</span> Delgue, Tatiana </p>
+<p>10) <span class="negrita">VOCAL V: </span>Borges, Pía</p>
+<p>10) <span class="negrita">VOCAL VI: </span>Almeida, Guadalupe</p>
 <p>11)<span class="negrita"> SINDICO SUPLENTE: </span></p>
 
 <a href="../index.html"><button>Volver</button></a>
