--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -29,7 +29,7 @@
 
     <p>La Cooperativa está dirigida por el Consejo de Administración. Sus miembros son elegidos en la Asamblea mediante el voto virtual y secreto de los asociados. El escrutinio se hará inmediatamente después del acto eleccionario y se proclamará
     a los candidatos que hubieren obtenido mayoría de votos. <br>
-    Se distribuirán en la primera sesión del Consejo de Administración los siguientes cargos: un Presidente, un Vicepresidente, un Secretario, un Tesorero, un Síndico, un Síndico suplente, Tres vocales y Tres vocales suplentes. <br>
+    Se distribuirán en la primera sesión del Consejo de Administración los siguientes cargos: un Presidente, un Vicepresidente, un Secretario, un Tesorero, un Síndico, Tres vocales y Tres vocales suplentes. <br>
     El Consejo y sus integrantes deben cumplir con deberes y obligaciones que se encuentran explicadas en el <a href="../img/Estatuto Cooperativa .pdf" target="_blank">Estatuto.</a></p>
 
  <h2>Integrantes del Consejo de Administracion 2023:</h2> 
@@ -43,8 +43,8 @@
 <p>8) <span class="negrita">VOCAL III: </span>Echeverri, Tyara</p>
 <p>9)<span class="negrita"> VOCAL IV:</span> Delgue, Tatiana </p>
 <p>10) <span class="negrita">VOCAL V: </span>Borges, Pía</p>
-<p>10) <span class="negrita">VOCAL VI: </span>Almeida, Guadalupe</p>
-<p>11)<span class="negrita"> SINDICO SUPLENTE: </span></p>
+<p>11) <span class="negrita">VOCAL VI: </span>Almeida, Guadalupe</p>
+
 
 <a href="../index.html"><button>Volver</button></a>
 
