--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
        
         <div class="container">
-        <img src="img/banner.jpeg" alt="" height="" width="800">
+       <article> <img src="img/banner.jpeg" alt="" height="" width="800"></article>
             <p class="logo">Coop-Virtual</p>
             <nav>
                 <a class=rojo1 href= "pages/departamentos.html">Departamentos</a>
