--- a/pages/Proyectos.html
+++ b/pages/Proyectos.html
@@ -12,7 +12,7 @@
     <header>
        
         <div class="container">
-        <img src="img/banner.jpeg" alt="" height="" width="800">
+        <img src="../img/banner.jpeg" alt="" height="" width="800">
             <p class="logo">Coop-Virtual</p>
             <nav>
                 <a class=rojo1 href= "departamentos.html">Departamentos</a>
@@ -25,7 +25,7 @@
         </div>
     </header>
 
-    PROYECTOS  2023 
+   <h1> PROYECTOS  2023 </h1>
 
 <p><span class="negrita">Depto. de Comunicación y Difusión:</span> Se llevo a cabo un grupo de difusión en la plataforma Instagram con novedades sobre la cooperativa y diferentes departamentos y la realización de esta página web en la que se informa sobre la Cooperativa en sus años anteriores y la actualidad (2023). <br>
 <br>
