--- a/pages/asamblea.html
+++ b/pages/asamblea.html
@@ -26,7 +26,7 @@
     </header>
 
     <h1>Asambleas</h1>
-    <p>Existen dos tipos de Asambleas las ordinarias y extraordinarias, estas son de carácter legal igual que las decisiones que
+    <p>Existen dos tipos de Asambleas, las ordinarias y extraordinarias, estas son de carácter legal igual que las decisiones que
     serán tomadas en ella.</p>
     <p>Las asambleas deben convocarse con 15 días de anticipación y para que estas sean celebradas debe encontrarse la mitad más uno de la cantidad total de los asociados.
     <h2>Asamblea Ordinaria</h2>
