--- a/pages/valores.html
+++ b/pages/valores.html
@@ -12,7 +12,7 @@
     <header>
        
         <div class="container">
-        <img src="img/banner.jpeg" alt="" height="" width="800">
+        <img src="../img/banner.jpeg" alt="" height="" width="800">
             <p class="logo">Coop-Virtual</p>
             <nav>
                 <a class=rojo1 href= "departamentos.html">Departamentos</a>
