--- a/pages/asamblea.html
+++ b/pages/asamblea.html
@@ -32,10 +32,10 @@
     <h2>Asamblea Ordinaria</h2>
         <p>La Asamblea Ordinaria se realiza una vez por año, dentro de los treinta días siguientes a la fecha de cierre del ejercicio social y antes de la finalización del año lectivo. En estas se tratan los siguientes puntos: <br>
     Memoria, Balance General, Estado de Resultados y demás Cuadros Anexos, de realizar estos informes se encarga el Dpto. de Administración, e Informes del Sindico.</p>
-       <p>Se elije el nuevo Consejo de Administración, mediante el voto electronico. Para votar los asociados deben tener las cuotas al día y tienen un unico voto por asosiado. <br>
-       Una vez presentes la mitad más uno del total de los asociados se da comienzo a la asamblea y al inicio de esta se designa a dos asosiados presentes para firmar el acta junto a el Presidente y el Secretario.</p>
+       <p>Se elije el nuevo Consejo de Administración, mediante el voto electronico. Para votar los asociados deben tener las cuotas al día y tienen un unico voto por persona.
+        Una vez presentes la mitad más uno del total de los asociados se da comienzo a la asamblea y al inicio de esta se designa a dos asociados presentes para firmar el acta junto a el Presidente y el Secretario.</p>
        <h2>Asamblea Extrordinaria</h2>
-       <p>En este tipo de asamble se trata cualquier tema que inquiete a los asosiados. También cuando los Departamentos tienen problemas internos que entre sus integrantes o su jefe no pueden resolver se puede hablar e intentar resolver estos con el Consejo de Administración. <br>Quien se encarga de saber que temas inquieta a los departamentos es el Secretario que tomará nota de estos y los comunicará cuando inicie la asamblea</p>
+       <p>En este tipo de asamble se trata cualquier tema que inquiete a los asociados. También cuando los Departamentos tienen problemas internos que entre sus integrantes o su jefe no pueden resolver se puede hablar e intentar resolver estos con el Consejo de Administración. <br>Quien se encarga de saber que temas inquieta a los departamentos es el Secretario que tomará nota de estos y los comunicará cuando inicie la asamblea</p>
        <h3>¿Quiénes  pueden convocar las Asambleas Extraordinarias?</h3>
        <p>Estas pueden ser convocadas por el Consejo de Administración, Sindico, Comisión Asesora o los asosiados que superen juntos el 10%.</p>
       
