--- a/pages/creacion.html
+++ b/pages/creacion.html
@@ -27,7 +27,7 @@
         <br>
     <h1>Creación de la Cooperativa</h1>
     
- <p> La Cooperativa Escolar “El Progreso” comenzó a conformarse en la Escuela de Educación Media Dr. Mariano Moreno en el año 2007 para concretarse en el año 2008 como un proyecto de los alumnos de tercero Polimodal y los profesores responsables de la asignatura “Discurso en la empresa y Tecnología de Gestión”. Su fin fue buscar una forma diferente de trabajar en el aula y a su vez acercar a los alumnos a la realidad del trabajo cooperativo.
+ <p> La Cooperativa Escolar “El Progreso” comenzó a conformarse en la Escuela de Educación Secundaria Dr. Mariano Moreno en el año 2007 para concretarse en el año 2008 como un proyecto de los alumnos de tercero Polimodal y los profesores responsables de la asignatura “Discurso en la empresa y Tecnología de Gestión”. Su fin fue buscar una forma diferente de trabajar en el aula y a su vez acercar a los alumnos a la realidad del trabajo cooperativo.
 El nombre de la Cooperativa Escolar, fue elegido en la Asamblea Provisoria el día 4 de septiembre de 2009 mediante la votación de los 56 asociados presentes. <br>
 Los nombres propuestos para la Cooperativa fueron los siguientes: “La Esperanza”, “La Esperada”, “Mariano Moreno”, “El Triunfo”, “La Unión” y “El Progreso”, este ultimo nombre fue el seleccionado por una mayoría de veinte votos. <br>
 Un año más tarde, en 2010, la DGCYE le otorgo la Personería Escolar Nº5829-4899096/09 convirtiéndose en una entidad formal registrada en el INAES. A partir de ese momento, los alumnos que cursan en la institución, se han encargado de hacerla crecer a través del trabajo diario y conjunto en base a los valores y principios cooperativos. <br>
