--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -32,7 +32,7 @@
     Se distribuirán en la primera sesión del Consejo de Administración los siguientes cargos: un Presidente, un Vicepresidente, un Secretario, un Tesorero, un Síndico, Tres vocales y Tres vocales suplentes. <br>
     El Consejo y sus integrantes deben cumplir con deberes y obligaciones que se encuentran explicadas en el <a href="../img/Estatuto Cooperativa .pdf" target="_blank">Estatuto.</a></p>
 
- <h2>Integrantes del Consejo de Administracion 2023:</h2> 
+ <h2>Integrantes del Consejo de Administración 2023:</h2> 
 <p>1) <span class="negrita">PRESIDENTE: </span> Retegui, Marco</p>
 <p>2) <span class="negrita">VICEPRESIDENTE: </span> Alvarez, Maite</p>
 <p>3) <span class="negrita">SECRETARIA:</span> Montangie, Candelaria</p>
