--- a/pages/creacion.html
+++ b/pages/creacion.html
@@ -29,11 +29,11 @@
     
  <p> La Cooperativa Escolar “El Progreso” comenzó a conformarse en la Escuela de Educación Secundaria Dr. Mariano Moreno en el año 2007 para concretarse en el año 2008 como un proyecto de los alumnos de tercero Polimodal y los profesores responsables de la asignatura “Discurso en la empresa y Tecnología de Gestión”. Su fin fue buscar una forma diferente de trabajar en el aula y a su vez acercar a los alumnos a la realidad del trabajo cooperativo.
 El nombre de la Cooperativa Escolar, fue elegido en la Asamblea Provisoria el día 4 de septiembre de 2009 mediante la votación de los 56 asociados presentes. <br>
-Los nombres propuestos para la Cooperativa fueron los siguientes: “La Esperanza”, “La Esperada”, “Mariano Moreno”, “El Triunfo”, “La Unión” y “El Progreso”, este ultimo nombre fue el seleccionado por una mayoría de veinte votos. <br>
+Los nombres propuestos para la Cooperativa fueron los siguientes: “La Esperanza”, “La Esperada”, “Mariano Moreno”, “El Triunfo”, “La Unión” y “El Progreso”, este último nombre fue el seleccionado por una mayoría de veinte votos. <br>
 Un año más tarde, en 2010, la DGCYE le otorgo la Personería Escolar Nº5829-4899096/09 convirtiéndose en una entidad formal registrada en el INAES. A partir de ese momento, los alumnos que cursan en la institución, se han encargado de hacerla crecer a través del trabajo diario y conjunto en base a los valores y principios cooperativos. <br>
 En el año 2017 tras el arduo trabajo de fomentar en los alumnos actitudes cooperativistas, se conformó un Consejo de Administración en el que, por primera vez, los alumnos de quinto y sexto año participan activamente. <br>
 A lo largo de los años, la Cooperativa Escolar “El Progreso” ha adquirido  diferentes instrumentos como una máquina fotocopiadora, gazebo, anafe, heladera, horno eléctrico, elementos para realizar diversos deportes y material para construcción de un aula exclusiva para la Cooperativa denominada “Coopaula”. <br>
-En este año 2023 la cantidad total de asociados es de 126, en donde estan incluidos los turno mañana, tarde y noche de la institución educativa N°3 "Dr. Mariano Moreno"</p>
+En este año 2023 la cantidad total de asociados es de 126, en donde están incluidos los turnos mañana, tarde y noche de la institución educativa N°3 "Dr. Mariano Moreno"</p>
     <img src="../img/coopaula inicio.jpeg" alt="">
     <img src="../img/coopA3.jpeg" alt="">
 
