--- a/pages/creacion.html
+++ b/pages/creacion.html
@@ -12,7 +12,7 @@
     <header>
        
         <div class="container">
-        <img src="../img/banner.jpeg" alt="" height="" width="800">
+            <article> <img src="../img/banner.jpeg" alt="" height="" width="800"></article>
             <p class="logo">Coop-Virtual</p>
             <nav>
                 <a class=rojo1 href= "departamentos.html">Departamentos</a>
@@ -42,10 +42,9 @@ En este año 2023 la cantidad total de asociados es de 126, en donde están incl
     <footer>
         <div class="container">
         <p>&copy; Cooperativa Escolar "El Progreso" 2023</p>
-        <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="../img/instagram.webp" alt="" height="75"></a>
-        <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="../img/facebook.png" alt="" height="75"></a>
-        <a href="#" target="_blank"><img src="../img/whatsapp .jpg" alt="" height="75"></a>
-    
+        <a  href="https://www.instagram.com/coop.escolar.el.progreso/" target="_blank"><img src="../img/instagram.webp" alt="" height="75"class="icono1"></a>
+        <a href="https://www.facebook.com/people/Cooperativa-Escolar-El-Progreso/100066414342905/"target="_blank"><img src="../img/facebook.png" alt="" height="75" class="icono2"></a>
+        <a href="#" target="_blank"><img src="../img/whatsapp .jpg" alt="" height="75"class="icono3"></a>
     </div>
     </footer>
 </body>
