--- a/pages/creacion.html
+++ b/pages/creacion.html
@@ -34,8 +34,9 @@ Un año más tarde, en 2010, la DGCYE le otorgo la Personería Escolar Nº5829-4
 En el año 2017 tras el arduo trabajo de fomentar en los alumnos actitudes cooperativistas, se conformó un Consejo de Administración en el que, por primera vez, los alumnos de quinto y sexto año participan activamente. <br>
 A lo largo de los años, la Cooperativa Escolar “El Progreso” ha adquirido  diferentes instrumentos como una máquina fotocopiadora, gazebo, anafe, heladera, horno eléctrico, elementos para realizar diversos deportes y material para construcción de un aula exclusiva para la Cooperativa denominada “Coopaula”. <br>
 En este año 2023 la cantidad total de asociados es de 126, en donde están incluidos los turnos mañana, tarde y noche de la institución educativa N°3 "Dr. Mariano Moreno"</p>
-    <img src="../img/coopaula inicio.jpeg" alt="">
-    <img src="../img/coopA3.jpeg" alt="">
+
+<p align="middle"><img src="../img/coopaula inicio.jpeg" alt="" width="780"></p>
+    <p align="middle"> <img src="../img/coopA3.jpeg" alt="" width="780"></p>
 
     <p><a href="../index.html"> <button>Volver</a></button></p>
 </main>
