--- a/pages/asamblea.html
+++ b/pages/asamblea.html
@@ -39,14 +39,18 @@
        <h3>¿Quiénes  pueden convocar las Asambleas Extraordinarias?</h3>
        <p>Estas pueden ser convocadas por el Consejo de Administración, Sindico, Comisión Asesora o los asosiados que superen juntos el 10%.</p>
       
-       <h2>Asamblea 2018</h2>
-       <img src="../img/asamblea 2018.jpeg" alt="" width="780">
+       <h2 align="middle">Asamblea 2018</h2>
+       <p align="middle"><img src="../img/asamblea 2018.jpeg" alt="" width="780"></p>
 
-       <h2>Asamblea 2020</h2>
-       <img src="../img/asamblea 2020.jpeg" alt="">
+       <h2 align="middle">Asamblea 2020</h2>
+       <p align="middle"><img src="../img/asamblea 2020.jpeg" alt="" width="780"></p>
        
-       <h2>Asamblea 2021</h2>
-  <img src="../img/asamblea 2021.jpeg" alt="" width="780">
+       <h2 align="middle">Asamblea 2021</h2>
+       <p align="middle"><img src="../img/asamblea 2021.jpeg" alt="" width="780"></p>
+  <h2 align="middle">Asamblea 2023</h2>
+  <p align="middle"><img src="../img/asamblea 2023.jpeg" alt="" width="780"></p>
+  <h3 align="middle">Resultados de la Asamblea del día 16 de noviembre de 2023</h3>
+  <p align="middle"><img src="../img/resultados.jpeg" alt="" width="780"></p>
 
   <p><a href="../index.html"><button>Volver</a></button></p>  
     </p>
