--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -45,6 +45,21 @@
 <p>10) <span class="negrita">VOCAL V: </span>Borges, Pía</p>
 <p>11) <span class="negrita">VOCAL VI: </span>Almeida, Guadalupe</p>
 
+<h2>Integrantes del Consejo de Administración 2024:</h2> 
+<p>1) <span class="negrita">PRESIDENTE: </span> Lochbaum, Pío</p>
+<p>2) <span class="negrita">VICEPRESIDENTE: </span> Gon</p>González,Estefanía
+<p>3) <span class="negrita">SECRETARIA:</span> Beltrame, Zoe</p>
+<p>4) <span class="negrita">SINDICO:</span> Leibold, Lucia</p>
+<p>5) <span class="negrita">SINDICO SUPLENTE:</span> Sánchez, Nazareno</p>
+<p>6) <span class="negrita">TESORERO:</span> Domenicale, Bautista</p>
+<p>7) <span class="negrita">TESORERO SUPLENTE:</span> Dégele, Dalma</p>
+<p>8) <span class="negrita">VOCAL I:</span> Dégele, Agustina </p>
+<p>9) <span class="negrita">VOCAL II: </span>Melo, Candela</p>
+<p>10) <span class="negrita">VOCAL III: </span>Cabrera, Lira</p>
+<p>11)<span class="negrita"> VOCAL IV:</span> Machado, Benjamín </p>
+<p>12) <span class="negrita">VOCAL V: </span>Almeida, Priscila</p>
+<p>13) <span class="negrita">VOCAL VI: </span>De Barbara, Agustina</p>
+<p>14) <span class="negrita">VOCAL SUPLENTE: </span>Rohlmann, Bautista</p>
 
 <a href="../index.html"><button>Volver</button></a>
 
