--- a/pages/consejo.html
+++ b/pages/consejo.html
@@ -47,7 +47,7 @@
 
 <h2>Integrantes del Consejo de Administración 2024:</h2> 
 <p>1) <span class="negrita">PRESIDENTE: </span> Lochbaum, Pío</p>
-<p>2) <span class="negrita">VICEPRESIDENTE: </span> Gon</p>González,Estefanía
+<p>2) <span class="negrita">VICEPRESIDENTE: </span> </p>González, Estefanía
 <p>3) <span class="negrita">SECRETARIA:</span> Beltrame, Zoe</p>
 <p>4) <span class="negrita">SINDICO:</span> Leibold, Lucia</p>
 <p>5) <span class="negrita">SINDICO SUPLENTE:</span> Sánchez, Nazareno</p>
